--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -68,3 +68,33 @@ a:hover {
 ul {
   list-style-position: inside;
 }
+
+.to-top-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #212121;
+  font-weight: 900;
+  font-size: 24px;
+  opacity: 0.5;
+  color: white;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 150px;
+  right: 200px;
+  border-radius: 50%;
+  transition: opacity 0.2s;
+}
+
+.to-top-button .text {
+  transition: transform 0.2s;
+}
+
+.to-top-button:hover {
+  opacity: 0.8;
+}
+
+.to-top-button:hover .text {
+  transform: translateY(-10px) scale(1.2);
+}
